Load destinations correctly from json.

--- a/app/templates/configure/event.html
+++ b/app/templates/configure/event.html
@@ -99,7 +99,7 @@
              id="determining-entities-container">
             <label>Determining Values:</label>
             <!-- Placeholder for appending new entities -->
-            <div id="determining_list_end" style="unobtrusive"></div>
+            <div id="determining_list_end" class="unobtrusive"></div>
             <div class="select-box-container">
                 {% if game_data.attribs %}
                     <div class="select-box"
@@ -138,7 +138,7 @@
              id="changed-entities-container">
             <label>Values Changed:</label>
             <!-- Placeholder for appending new entities -->
-            <div id="changed_list_end" style="unobtrusive"></div>
+            <div id="changed_list_end" class="unobtrusive"></div>
             <div class="select-box-container">
                 {% if game_data.attribs %}
                     <div class="select-box"
@@ -206,7 +206,7 @@
                 </label>
                 <br>
                 <!-- Placeholder for appending new entities -->
-                <div id="triggers_list_end" style="unobtrusive"></div>
+                <div id="triggers_list_end" class="unobtrusive"></div>
                 <div class="select-box-container">
                     {% if game_data.items %}
                         <div class="select-box" title="Triggered by production of this item.">
