--- a/app/templates/play/location.html
+++ b/app/templates/play/location.html
@@ -117,18 +117,17 @@
                         </ul>
                     {% endif %}
                     {% if current.destinations %}
-                        <h2>Neighboring Locations</h2>
+                        <h2>Destinations</h2>
                         <ul>
                             {% for dest in current.destinations %}
-                                {% set other_loc = dest.get_loc() %}
-                                {% if other_loc.masked %}
+                                {% if dest.other_loc.masked %}
                                     (Unvisited)
                                 {% else %}
-                                    {% set link = url_for('play_location', loc_id=other_loc.id) %}
+                                    {% set link = url_for('play_location', loc_id=dest.other_loc.id) %}
                                     {% set letter = link_letters.next(link) %}
                                     <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
                                     <span>[{{ letter }}]</span>
-                                    <a href="{{ link }}">{{ other_loc.name }}</a>
+                                    <a href="{{ link }}">{{ dest.other_loc.name }}</a>
                                 {% endif %}
                                 — Distance {{ dest.distance | formatNum }}
                                 <br>
